# ldd-coding

./: .gitignore  .gitmodules  CMakeLists.txt  LDD3e-Concepts.md  README.md  examples.md  kmsgpipe-driver-spec.md  kmsgpipe-lab-part1.md  kmsgpipe-lab-part2.md  kmsgpipe-lab-part3.md  kmsgpipe-lab-part4.md  template-notes.md
chapter02/hello/: README.md
chapter02/hellop/: Makefile  READM.md
chapter03/: CMakeLists.txt  README.md
chapter03/simple_char_driver/: CMakeLists.txt  Makefile  Makefile.bak  README.md  simple_char.c  simple_char_load.sh  simple_char_unload.sh  simplechar.c
chapter04/: Debugging-Steps.md
chapter06/: CMakeLists.txt  README.md
chapter06/blocky/: CMakeLists.txt  Makefile  blocky.c  blocky_load.sh  blocky_unload.sh  circular_buffer.c  circular_buffer.h  main.c
chapter06/calculator/: CMakeLists.txt  Makefile  calculator.c  calculator.h  calculator_load.sh  calculator_unload.sh
kmsgpipe/: .gitignore  README.md
kmsgpipe/docs/: README.md  kmsgpipe-lab-part1.md
kmsgpipe/include/: kmsgpipe.h  kmsgpipe_ioctl.h
kmsgpipe/kmsgctl/: Cargo.toml  README.md
kmsgpipe/kmsgctl/src/: cli.rs  ioctl.rs  main.rs
kmsgpipe/labs/: KBuild-objects.md  KUNIT_KMSGPIPE_SETUP.md  kbuild-steps.md  kernel-driver-design-and-testing.md  kunit_kmsgpipe_setup.md
kmsgpipe/labs/lab1/: Kconfig  Makefile  README-1.md  README.md  driver.conf  kmsgpipe_core.c  kmsgpipe_core_test.c  kmsgpipe_fops.c  kmsgpipe_module.h  module.mk
kmsgpipe/labs/lab2/: Makefile  README.md  driver.conf  kmsgpipe_fops.c  kmsgpipe_module.c  kmsgpipe_module.h
kmsgpipe/labs/lab3/: Kconfig  Makefile  README.md  module.mk  (+2 more)
kmsgpipe/scripts/: base.sh  build.sh  clean.sh  insmod.sh  rmdevnode.sh  rmmod.sh  teardown.sh
kmsgpipe/userland/: Cargo.toml
userland-program/: CMakeLists.txt
userland-program/ch06/: CMakeLists.txt  calculator_ioctl.h  calculator_ioctl_fun.c  scull_ioctl.c  scull_ioctl.h
(+44 files in other folders)
